Created the basic layout

--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 	<title>Random Quotes</title>
 </head>
 
-<body>
-	<div class="container-fluid">
-		<section class="text-center">
-			<blockquote class="blockquote"><p>This is some text<p>
-				<footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-			</blockquote>
+<body>	
+	<section>
+		<blockquote class="blockquote text-center"><p>No matter how long the delays, how many closed doors you’ve experienced, keep things in perspective. Embrace the lessons. They’re all good in the end. The Almighty allowed them into your life. Be grateful.<p>
+			<footer class="blockquote-footer">Mufti Ismail Menk
+				<br>
+				<a href="https:www.muftimenk.com">
+					<cite title="Motivational Moments">Motivational Moments</cite>
+				</a>
+			</footer>
+		</blockquote>
+		<div class="text-center">
 			<button class="btn btn-primary newQuote">New Quote</button>
-		</section>
+		</div>
+	</section>
 
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
