--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<title>Random Quotes</title>
 </head>
 
-<body>	
+<body>
+<div class="container-fluid">	
 	<section>
 		<blockquote class="blockquote text-center"><p>No matter how long the delays, how many closed doors you’ve experienced, keep things in perspective. Embrace the lessons. They’re all good in the end. The Almighty allowed them into your life. Be grateful.<p>
 			<footer class="blockquote-footer">Mufti Ismail Menk
@@ -23,7 +24,10 @@
 		<div class="text-center">
 			<button class="btn btn-primary newQuote">New Quote</button>
 		</div>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
+</div>
+
 
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
