--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container-fluid">	
 	<section>
-		<blockquote class="blockquote text-center"><p>No matter how long the delays, how many closed doors you’ve experienced, keep things in perspective. Embrace the lessons. They’re all good in the end. The Almighty allowed them into your life. Be grateful.<p>
+		<blockquote class="blockquote text-center"><p>If people display bad character towards us, it should not make us drop our good character as a result.<p>
 			<footer class="blockquote-footer">Mufti Ismail Menk
 				<br>
 				<a href="https:www.muftimenk.com">
