--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 <body>
 <div class="container-fluid">	
 	<section>
-		<blockquote class="blockquote text-center"><p>If people display bad character towards us, it should not make us drop our good character as a result.<p>
-			<footer class="blockquote-footer">Mufti Ismail Menk
-				<br>
-				<a href="https:www.muftimenk.com">
-					<cite title="Motivational Moments">Motivational Moments</cite>
-				</a>
-			</footer>
-		</blockquote>
+		<h2 class="text-center">Motivational Quotes</h1>
+		
+		<div class="notepaper">
+			<div class="quote">
+				<blockquote class="curly-quotes"><p>If people display bad character towards us, it should not make us drop our good character as a result.</p>
+				</blockquote>
+				<footer class="blockquote-footer text-right">Mufti Ismail Menk
+						<a href="https:www.muftimenk.com"><br>
+							<cite title="Motivational Moments">Motivational Moments</cite>
+						</a>
+				</footer>
+			</div>
+		</div>
 		<div class="text-center">
 			<button class="btn btn-primary newQuote">New Quote</button>
 		</div>
