White background and the quote in the middle

--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
 	<title>Random Quotes</title>
 </head>
 
-<body>
-<div class="container-fluid">	
-	<section>
-		<blockquote class="blockquote text-center"><p>If people display bad character towards us, it should not make us drop our good character as a result.<p>
-			<footer class="blockquote-footer">Mufti Ismail Menk
-				<br>
-				<a href="https:www.muftimenk.com">
-					<cite title="Motivational Moments">Motivational Moments</cite>
-				</a>
-			</footer>
-		</blockquote>
+<div class="container-fluid">
+<body>	
+	<section>				
+			<div class="quote">
+				<blockquote class="blockquote mb-0">
+					<p>If people display bad character towards us, it should not make us drop our good character as a result.</p>
+					</blockquote>
+
+				<footer class="blockquote-footer">Mufti Ismail Menk
+						<!-- <a href="https:www.muftimenk.com"><br>
+							<cite title="Motivational Moments">Motivational Moments</cite>
+						</a> -->
+				</footer>
+			</div>
 		<div class="text-center">
-			<button class="btn btn-primary newQuote">New Quote</button>
+			<button class="btn btn-success newQuote">New Quote</button>
 		</div>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
-</div>
-
 
 
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script src="main.js"></script>
-	</div>
-</body>
+	</body>
+</div>
 </html>
