Made massive changes, twitter function working, facebook href not added yet

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Quotes</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Random Quotes</title>
+	
+	<!-- Font Awesome -->
+	<script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
-<div class="container-fluid">
 <body>	
 	<section>				
 			<div class="quote">
-				<blockquote class="blockquote mb-0">
+				<blockquote class="blockquote">
 					<p>If people display bad character towards us, it should not make us drop our good character as a result.</p>
 					</blockquote>
 
@@ -24,17 +28,22 @@
 						</a> -->
 				</footer>
 			</div>
-		<div class="text-center">
-			<button class="btn btn-success newQuote">New Quote</button>
-		</div>
-		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			
+			<div class="newQuote">				
+				<button class="btn btn-success">New Quote</button>
+			</div>
+
+			<div class="share">
+				<div class="twitter-share-button">
+					<a target="_blank" href="https://twitter.com/intent/tweet?text=If%20people%20display%20bad%20character%20towards%20us,%20it%20should%20not%20make%20us%20drop%20our%20good%20character%20as%20a%20result.&hashtags=Mufti%20Ismail%20Menk,Motivational%20Movements">
+						<i class="fab fa-twitter-square fa-2x" ></i>
+					</a>
+				</div>					
+				<div class="facebook-share-button">
+					<a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
+				</div>
+			</div>		
 	</section>
-
-
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-		<script src="main.js"></script>
-	</body>
-</div>
+<script src="main.js"></script>
+</body>
 </html>
