Facebook share functionality postponed

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 						<i class="fab fa-twitter-square fa-2x" ></i>
 					</a>
 				</div>					
-				<div class="facebook-share-button">
+				<!--<div class="facebook-share-button">
 					<a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
-				</div>
+				</div> -->
 			</div>		
 	</section>
 <script src="main.js"></script>
